2019-01-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (SetNexus): Merge IsNexusInCore()
	implementation code into SetNexus() and add check for if
	cache_info->pixels is null.  Fixes SourceForge issue #588 "Bug in
	IsNexusInCore()".

	* configure.ac (DcrawExtraOptions): Request TIFF output from dcraw
	if build supports TIFF format in order to obtain more metadata.
	This allows obtaining some metadata from standard TIFF tags
	(e.g. camera make, model, and dcraw version), and any attached ICC
	profile, but not specifically EXIF data since we don't support
	extracting EXIF data from TIFF yet. Inspired by SourceForge issue
	589 "Identify lack of data (no Exif) in RAW formats".

2018-12-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (ReadJPEGImage): Move return point for 'ping' mode
	until after jpeg_start_decompress() and after JPEG compression
	properties have been estimated.  Fixes SourceForge issue #578 "gm
	identify with format "%[JPEG-Colorspace-Name]" does not work" and
	#586 "Identify returning wrong compression values".

2018-12-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/gif.c (ReadGIFImage): Don't throw an error if opacity is
	outside of the range of the image colors.  Fix suggested by 莫红波
	<hongbo.mo@upai.com> on the graphicsmagick-bugs mailinb list on
	Fri, 9 Oct 2015.

	* magick/memory.h (MagickAllocateClearedArray): New macro for
	allocating a cleared array.

	* magick/resize.c (ScaleImage): Patch by Troy Patteson which
	resolves SourceForge issue #381 "Artifacts when scaling a PNG with
	semi-transparent pixels".

	ScaleImage() suffers from two problems related to the blending of
	fully transparent pixels with non-fully transparent pixels during
	the scaling operation.

	The first is that the colour values for fully transparent pixels
	are contributing to the colour values of the blended pixels when
	they should not.

	The second is that the colour values of pixels blended with fully