@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190105"
-#define public MagickPackageReleaseDate "snapshot-20190105"
+#define public MagickPackageVersionAddendum ".020190130"
+#define public MagickPackageReleaseDate "snapshot-20190130"
