@@ -1,4 +1,4 @@
-.TH gm 1 "2018/10/14" "GraphicsMagick"
+.TH gm 1 "2019/01/30" "GraphicsMagick"
 .TP
 .in 15
 .in 15
@@ -1818,6 +1818,14 @@ If non-zero, try and use multi-threaded encoding.
  \fR
 .in 20
 If set, reduce memory usage (but increase CPU use)
+
+.in 15
+.in 15
+.B "webp:use-sharp-yuv={true|false}"
+.in 20
+ \fR
+.in 20
+If set, if needed, use sharp (and slow) RGB->YUV conversion
 
 .in 15
 
