@@ -35,6 +35,14 @@
 <div class="document">
 
 
+<p>2019-01-30  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/webp.c (WriteWEBPImage): Patch by Przemysław Sobala to
+support WebP 'use_sharp_yuv' option (&quot;if needed, use sharp (and
+slow) RGB-&gt;YUV conversion&quot;) via <cite>-define webp:use-sharp-yuv=true</cite>.</li>
+</ul>
+</blockquote>
 <p>2019-01-05  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
