@@ -1814,6 +1814,9 @@ size will be similar but the degradation will be lower.
 <dt>webp:low-memory={true|false}</dt>
 <dd>If set, reduce memory usage (but increase CPU use)
 </dd>
+<dt>webp:use-sharp-yuv={true|false}</dt>
+<dd>If set, if needed, use sharp (and slow) RGB-&gt;YUV conversion
+</dd>
 </dl>
 </font></td></tr></table>
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
